# cyd-satelite-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old  todo.md
docs/: todo.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/images/: world_380x240.c  world_480x320.c
main/inc/: board_pins.h  display.h  sdcard.h  ui.h
main/orbits/: map_projection.c  map_projection.h  orbit.h  orbit_app.c  orbit_app.h  orbit_geo.c  orbit_geo.h  orbit_perturb.cpp
main/src/: display.c  main.c  sdcard.c  ui.c
